--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,5 +1,12 @@
 # main links links
 main:
+
+  - title: "Blog Posts"
+    url: /year-archive/
+    
+  - title: "CV"
+    url: /cv/
+
 #   - title: "Publications"
 #     url: /publications/
 
@@ -8,18 +15,21 @@ main:
     
   - title: "Experience"
     url: /experience/
+    
+  - title: "Projects"
+    url: /projects/
+  
+  - title: "Grants"
+    url: /grants/
+    
+  - title: "Initiatives"
+    url: /initiatives/
 
   - title: "Teaching"
     url: /teaching/    
     
 #   - title: "Portfolio"
 #     url: /portfolio/
-        
-  - title: "Blog Posts"
-    url: /year-archive/
-    
-  - title: "CV"
-    url: /cv/
     
 #   - title: "Guide"
 #     url: /markdown/
