--- a/_config.yml
+++ b/_config.yml
@@ -81,8 +81,8 @@ analytics:
 # Site Author
 author:
   name             : "Alish Dipani"
-  avatar           : "profile.png"
-  bio              : "left bio"
+  avatar           : "profile.jpeg"
+  bio              : 
   location         : "India"
   employer         :
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
