--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Alish Dipani"
   avatar           : "profile.jpeg"
-  bio              : "Exploring intersection of Neuroscience and Artificial Intelligence. Currently working on Spiking Neural Networks and Neuromorphic Computing."
+  bio              : "Exploring intersection of Neuroscience and Artificial Intelligence."
   location         : "India"
   employer         :
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
