--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,8 +4,8 @@ main:
   - title: "Blog Posts"
     url: /year-archive/
     
-  - title: "CV"
-    url: /cv/
+#   - title: "CV"
+#     url: /cv/
 
 #   - title: "Publications"
 #     url: /publications/
