--- a/_config.yml
+++ b/_config.yml
@@ -9,11 +9,11 @@
 locale                   : "en-US"
 title                    : "Alish Dipani"
 title_separator          : "-"
-name                     : &name "Alish Dipani"
-description              : &description "Recent Grad"
-url                      : https://alishdipani.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+name                     : &name "Rishabh Patra"
+description              : &description "Undergraduate"
+url                      : https://hades-rp2010.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "alishdipani.github.io"
+repository               : "hades-rp2010.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
@@ -96,7 +96,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "alishdipani"
+  github           : "hades-rp2010"
   google_plus      :
   keybase          :
   instagram        :
@@ -109,7 +109,7 @@ author:
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : "alu57202"
+  twitter          : "rpatra_2010"
   vine             :
   weibo            :
   xing             :
