--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -13,20 +13,20 @@ main:
 #   - title: "Talks"
 #     url: /talks/ 
     
-  - title: "Experience"
-    url: /experience/
+  - title: "Research"
+    url: /research/
     
   - title: "Projects"
     url: /projects/
   
-  - title: "Grants"
-    url: /grants/
+#  - title: "Grants"
+#    url: /grants/
     
-  - title: "Initiatives"
-    url: /initiatives/
+#  - title: "Initiatives"
+#    url: /initiatives/
 
-  - title: "Teaching"
-    url: /teaching/    
+#  - title: "Teaching"
+#    url: /teaching/    
     
 #   - title: "Portfolio"
 #     url: /portfolio/
