--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,8 +4,6 @@ main:
   - title: "Blog Posts"
     url: /year-archive/
     
-#   - title: "CV"
-#     url: /cv/
 
 #   - title: "Publications"
 #     url: /publications/
@@ -18,6 +16,9 @@ main:
     
   - title: "Projects"
     url: /projects/
+
+  - title: "CV"
+    url: /cv/
   
 #  - title: "Grants"
 #    url: /grants/
