Remove redundant files

--- a/_config.yml
+++ b/_config.yml
@@ -80,9 +80,9 @@ analytics:
 
 # Site Author
 author:
-  name             : "Alish Dipani"
+  name             : "Rishabh Patra"
   avatar           : "profile.jpeg"
-  bio              : "Exploring intersection of Neuroscience and Artificial Intelligence."
+  bio              : "Trying to get human-like intelligence in Machines."
   location         : "India"
   employer         :
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
