--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Alish Dipani"
+title                    : "Rishabh Patra"
 title_separator          : "-"
 name                     : &name "Rishabh Patra"
 description              : &description "Undergraduate"
