--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -18,7 +18,7 @@ main:
     url: /projects/
 
   - title: "CV"
-    url: /cv/
+    url: "https://drive.google.com/file/d/18wCudNCni9TP6DFUcMcQ0LHxzBAXiymG/view?usp=sharing"
   
 #  - title: "Grants"
 #    url: /grants/
